# github-code-review-rules

./: .eslintrc.js  .gitignore  .htmlhintrc  .pre-commit-config.yaml  .stylelintrc.json  Makefile  README.md  biome.json  pyproject.toml
deploy/: Dockerfile  deploy.sh  docker-compose.yml  performance_test.py
docs/: implementation_plan.md  project_description.md  system_requirements.md  technical_design.md
github_pr_rules_analyzer/: __init__.py  config.py  main.py
github_pr_rules_analyzer/api/: __init__.py  routes.py
github_pr_rules_analyzer/github/: client.py
github_pr_rules_analyzer/models/: __init__.py  code_snippet.py  comment_thread.py  extracted_rule.py  pull_request.py  repository.py  review_comment.py  rule_statistics.py
github_pr_rules_analyzer/services/: data_collector.py  data_processor.py  llm_service.py
github_pr_rules_analyzer/utils/: __init__.py  database.py  logging.py
github_pr_rules_analyzer/web/: __init__.py
static/css/: style.css
static/js/: dashboard.js
templates/: 404.html  500.html  index.html
tests/: conftest.py  test_api_routes.py  test_data_collector.py  test_data_processor.py  test_github_client.py  test_integration.py  test_llm_service.py  test_main.py  test_models.py
